tests/paczka2/big_fuzzy/87444240.err
Error in line 9: GZp0gwiQ7nB S169 76,4
Error in line 20: SVgdwSEs0md A272 56,8
Error in line 34: A272 S848 38,7
Error in line 73: gYLC8 A272 41,3
Error in line 92: QNLfP4rYddz A272 93,6
Error in line 82: H0xmBBWi7UO A272 24,9
Error in line 99: H0xmBBWi7UO S848 97,8
Error in line 93: gYLC8 A272 70,0
Error in line 101: H0xmBBWi7UO A272 52,7
Error in line 110: QNLfP4rYddz S990 37,5
Error in line 139: GZp0gwiQ7nB A272 56,6
Error in line 140: GZp0gwiQ7nB S848 81,9
Error in line 159: SVgdwSEs0md A272 32,5
Error in line 160: SVgdwSEs0md S990 54,2
Error in line 174: EIKNCRQ S990 23,3
Error in line 178: gYLC8 S169 30,2
Error in line 186: SVgdwSEs0md S848 29,8
Error in line 179: gYLC8 S990 31,4
Error in line 176: QNLfP4rYddz S990 44,2
Error in line 189: QNLfP4rYddz S169 77,3
Error in line 130: H0xmBBWi7UO S169 149,8
Error in line 203: EIKNCRQ A272 183,5
Error in line 218: H0xmBBWi7UO S990 43,8
Error in line 219: gYLC8 A272 17,6
Error in line 217: SVgdwSEs0md S169 131,8
Error in line 233: GZp0gwiQ7nB S169 50,7
Error in line 224: H0xmBBWi7UO S169 27,4
Error in line 236: SVgdwSEs0md S990 30,9
Error in line 240: gYLC8 S990 3,2
Error in line 231: QNLfP4rYddz A272 29,7
